--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
-    "strictBindCallApply": false,
+    "strict": true,
+    "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": false
   }
 }
